--- a/sekce/1-uvod.tex
+++ b/sekce/1-uvod.tex
@@ -39,5 +39,5 @@ závislost napětí na rozdílu teplot. Proto pro každá kombinace kovů musí 
 experimentálně změřena a~následně je pro ni určena ona závislost.
 
 V~této seminární práci si proto ukážeme a~vysvětlíme metodu nejmenších čtverců,
-jenž je v těchto situacích využívána a následně ji aplikujeme na naměřená data
+jenž je v~těchto situacích využívána a~následně ji aplikujeme na naměřená data
 termoelektrického napětí závislého na teplotním rozdílu.
