--- a/sekce/3.2-termoelektrika.tex
+++ b/sekce/3.2-termoelektrika.tex
@@ -1,48 +1,48 @@
 \subsection{Termoelektrický jev}
 \subsubsection{Efekty termoelektrické jevu}
 Termoelektrický jev se vyznačuje přímou konverzí tepla na elektrické napětí
-a~naopak. Objevuje se vždy u spojené dvojce různých kovů a ve své podstatě je
-sdružením čtyřech efektů pod jeden název: efektu Seebecka, Peltierova, Thomsonova
-a~Benedickova.~\cite{praktikum,diplomka}
+a~naopak. Objevuje se vždy u~spojené dvojce různých kovů a~ve své podstatě je
+sdružením čtyřech efektů pod jeden název: efektu Seebecka, Peltierova,
+Thomsonova a~Benedickova.~\cite{praktikum,diplomka}
 
-Termoelektrické napětí~$E$ vznikající mezi spoji kovů a je závislé na funkci
+Termoelektrické napětí~$E$ vznikající mezi spoji kovů a~je závislé na funkci
 rozdílu teplot~$\Delta T = T_1 - T_2$. Je vyjádřeno pomocí vztahu
 \eq{
     E = \int_{T_1}^{T_2}\(\alpha\_B(T)-\alpha\_A(T)\)dT\,,
 }
-kde $\alpha\_A$ a $\alpha\_B$ jsou Seebeckekovy koeficienty kovů A a B a $T_1$
-a $T_2$ vyjadřují teploty spojů.  Tento vztah ovšem může být za podmínky
+kde $\alpha\_A$ a~$\alpha\_B$~jsou  Seebeckekovy koeficienty kovů A~a~B a~$T_1$
+a~$T_2$ vyjadřují teploty spojů.  Tento vztah ovšem může být za podmínky
 nízkého rozdílu teplot převeden do lineární formy
 \eq[m]{
     E &= \(\alpha_A - \alpha_B\)*\(T_2 - T_1\)\,,\\
     E &= \alpha\Delta T\,,
 }
 přičemž $\alpha$ značí koeficient pro danou dvojici kovů (také označován jako
-parametr termočlánku) a $\Delta T$ je rozdíl teplot konců.~\cite{diplomka}
+parametr termočlánku) a~$\Delta T$~je  rozdíl teplot konců.~\cite{diplomka}
 
 \paragraph{Seebeckův efekt} byl poprvé objeven německým fyzikem Thomasem
-Johannem Seebeckem a popisuje vlastnost termočlánku, která má za příčinu
+Johannem Seebeckem a~popisuje vlastnost termočlánku, která má za příčinu
 vytváření elektrického napětí na základě rozdílu teplot. Jestliže jeden spoj
-termočlánku začneme zahřívat a druhý naopak ochlazovat, vznikne na každém konci
+termočlánku začneme zahřívat a~druhý naopak ochlazovat, vznikne na každém konci
 jiný potenciál, což má za důvod vzniku termoelektrického
 napětí.~\cite{jreichl-seebeck}
 
 \paragraph{Peltierův efekt} je považován za přesným opak efektu Seebeckova. Byl
-objeven Jeanem Peltierem v roce 1834 a~dokazuje, že změna potenciálů, tedy
+objeven Jeanem Peltierem v~roce~1834 a~dokazuje, že změna potenciálů, tedy
 protékání proudu, může způsobit změnu teplot. To implikuje přenos tepla
 z~jednoho konce na druhý, což může být využito například pro chlazení předmětu
-bez nutnosti jakýchkoliv pohybujících se součástek.~\cite{jreichl-peltier, 
-peltier}
+bez nutnosti jakýchkoliv pohybujících se součástek.~\cite{peltier,
+jreichl-peltier}
 
-\paragraph{Thomsonův efekt} je třetí efekt v rámci termoelektrického jevu.
-Popisuje vlastnost vodiče při zahřívání jednoho z jeho konců. Zahříváním
+\paragraph{Thomsonův efekt} je třetí efekt v~rámci termoelektrického jevu.
+Popisuje vlastnost vodiče při zahřívání jednoho z~jeho konců. Zahříváním
 jednoho konce vodiče vzniká uvnitř materiálu teplotní gradient~$\Delta T/\Delta l$, 
 což vytváří mezi konci malé termoelektrické napětí. Je tím tedy velice
-podobný Seebeckovu efektu, ovšem zde se jedná pouze o jeden vodič namísto dvou
+podobný Seebeckovu efektu, ovšem zde se jedná pouze o~jeden vodič namísto dvou
 různých kovů.~\cite{jreichl-thomson}
 
-\paragraph{Benedickův efekt} pojednává o vzniku velice malého rozdílu
-potenciálů na koncích vodiče i v případě, že oba konce mají stejnou teplotu.
+\paragraph{Benedickův efekt} pojednává o~vzniku velice malého rozdílu
+potenciálů na koncích vodiče i~v~případě, že oba konce mají stejnou teplotu.
 Aby tak ale nastalo, musí ve vodiči existovat teplotní gradient, jenž tento
 rozdíl potenciálů způsobí.~\cite{diplomka} 
 %I když byl tento efekt objeven v~letech~1920 a~1921
@@ -53,14 +53,14 @@ rozdíl potenciálů způsobí.~\cite{diplomka}
 %\wrapfig[0.42\linewidth]{figures/termoclanek.eps}[Příklad zapojení termočlánku]
 Jako termočlánky nazýváme zařízení skládající se ze dvou, spolu spojených,
 druhů kovu. Ty svým spojením vytváření elektrický obvod. Jestliže budeme
-zahřívat jeden spoj kovů a ochlazovat druhý, můžeme v tomto obvodu důsledkem
+zahřívat jeden spoj kovů a~ochlazovat druhý, můžeme v~tomto obvodu důsledkem
 termoelektrického jevu pozorovat napětí. Toto napětí je ale velice malé, řádově
-pohybující se v milivoltech.
+pohybující se v~milivoltech.
 
 \fullfig[width=0.5\textwidth][h!]{figures/termoclanek.eps}[Příklad zapojení termočlánku]
 
 Různé kombinace materiálů mají různé parametry pro vytvoření termoelektrického 
-napětí. Teoretickou hodnotu měřeného napětí můžeme zjistit z termoelektrických
+napětí. Teoretickou hodnotu měřeného napětí můžeme zjistit z~termoelektrických
 potenciálů daných vodičů. Příklad takových hodnot je uveden 
 v~tabulce~\ref{tab:termoelectric_potencial}.
 
@@ -92,26 +92,26 @@ v~tabulce~\ref{tab:termoelectric_potencial}.
 
 Samozřejmě některé kombinace kovů jsou efektivnější než ostatní, proto
 byl vytvořen standart~\emph{IEC 584}, což je mezinárodní standart popisující
-různé efektivní kombinace prvků a slitin (viz.~tabulka~\ref{tab:iec584}).
+různé efektivní kombinace prvků a~slitin (viz.~tabulka~\ref{tab:iec584}).
 
 \begin{table}[htbp]
     \centering
     \begin{tabular}{cm{7cm}c}
         \toprule
-        Označení typu & Materiál & Teplotní rozsah v $\C$\\
+        Označení typu & Materiál & Teplotní rozsah v~$\C$\\
         \midrule
-        T & měď a konstantan (CuNi) & $-200$ -- 350\phantom{1 }\\
-        J & železo a konstantan (CuNi)& $-200$ -- 750\phantom{1 }\\
-        E & chromel (NiCr) a konstantan (CuNi) & $-100$ -- 900\phantom{1 }\\
-        K & chromel (NiCr) a alumen (NiAl) & $-200$ -- 1~200\\
-        N & nicrosil (NiCrSi) a nisil (NiSi) & $-200$ -- 1~200\\
-        S & platina a slitina platiny a~10~\% rhodia & \phantom{$-00$}0 -- 1~600\\
-        R & platina a slitina platiny a~13~\% rhodia & \phantom{$-00$}0 -- 1~600\\
+        T & měď a~konstantan (CuNi) & $-200$ -- 350\phantom{1 }\\
+        J & železo a~konstantan (CuNi)& $-200$ -- 750\phantom{1 }\\
+        E & chromel (NiCr) a~konstantan (CuNi) & $-100$ -- 900\phantom{1 }\\
+        K & chromel (NiCr) a~alumen (NiAl) & $-200$ -- 1~200\\
+        N & nicrosil (NiCrSi) a~nisil (NiSi) & $-200$ -- 1~200\\
+        S & platina a~slitina platiny a~10~\% rhodia & \phantom{$-00$}0 -- 1~600\\
+        R & platina a~slitina platiny a~13~\% rhodia & \phantom{$-00$}0 -- 1~600\\
         B & slitina platiny a~30~\% rhodia a~slitina platiny 
-        a~6~\% rhodia & \phantom{$-$}300 -- 1~700\\
+            a~6~\% rhodia & \phantom{$-$}300 -- 1~700\\
         \bottomrule
     \end{tabular}
-    \caption{Typy termočlánků a jejich označení dle 
+    \caption{Typy termočlánků a~jejich označení dle 
     standartu~\emph{IEC 584}.~\cite{diplomka,iec584}}
     \label{tab:iec584}
 \end{table}
