--- a/sekce/3.3-experiment.tex
+++ b/sekce/3.3-experiment.tex
@@ -1,60 +1,60 @@
 \subsection{Experiment}
 Jak název této seminární práce napovídá, naším konečným cílem je stanovení
-parametru termočlánku~$\alpha$. A toho nedosáhneme žádnou jinou cestou, než
-experimentem. Konkrétně v našem případě se bude jednat o měření parametru
+parametru termočlánku~$\alpha$. A~toho nedosáhneme žádnou jinou cestou, než
+experimentem. Konkrétně v~našem případě se bude jednat o~měření parametru
 termočlánku typu~T.
 
 \subsubsection{Princip měření}
-Experiment spočívá na ochlazování jednoho a ohřívání druhého konce termočlánku%
+Experiment spočívá na ochlazování jednoho a~ohřívání druhého konce termočlánku%
 \footnotei{.}{Místa spojů kovů} Toho docílíme ponořením prvního
-spoje do vody s ledem (kde udržujeme zhruba~$"0\C"$) a druhého do vařící vody.
+spoje do vody s~ledem (kde udržujeme zhruba~$"0\C"$) a~druhého do vařící vody.
 Ta se během experimentu ochlazuje kvůli předávání tepla do okolí. Toho mi
-využijeme a pozorujeme pomocí milivoltmetru, jak se napětí na termočlánku
-mění v závislosti na rozdílu teplot vody s ledem a vody teplé.
+využijeme a~pozorujeme pomocí milivoltmetru, jak se napětí na termočlánku
+mění v~závislosti na rozdílu teplot vody s~ledem a~vody teplé.
 
 \subsubsection{Sestavení termočlánku}
 Abychom mohli náš termočlánek měřit, musíme jej nejdříve sestavit. Protože se
-jedná o typ~T, budeme jej vytvářet z mědi a konstantanu. Stavbu termočlánku
+jedná o~typ~T, budeme jej vytvářet z~mědi a~konstantanu. Stavbu termočlánku
 jsem zahájili zaizolováním obou drátů pro ochranu mimo místa, kde dráty spojujeme
-či připojujeme k externímu zařízení, konkrétně milivoltmetru.
+či připojujeme k~externímu zařízení, konkrétně milivoltmetru.
 
 Následně jsme si připravili dřevěnou desku, na které celá konstrukce drží.
-Do ní jsme vyvrtali díry v~pravidelných intervalech a do krajních děr upevnili
+Do ní jsme vyvrtali díry v~pravidelných intervalech a~do krajních děr upevnili
 konektory sloužící pro následné připojení termočlánku k~měřidlu. Zaizolovaný
-drát konstantanu jsme protáhli skrze dříve vyvrtanými dírami a přizpůsobili
-jsme délku drátu. Konce konstantanu jsme odizolovali a připravili k následnému
-připojení k mědi.
+drát konstantanu jsme protáhli skrze dříve vyvrtanými dírami a~přizpůsobili
+jsme délku drátu. Konce konstantanu jsme odizolovali a~připravili k~následnému
+připojení k~mědi.
 
 Připravený drát mědi jsme rozdělili tak, abychom dostali dva kusy, které mají
-ideální délku na spojení konců konstantanového vodiče a připravených konektorů.
-Konce těchto dvou drátů jsme odizolovali, uchytili je v koncovkách a druhý
-konec zakroutili s odizolovanými konci konstantanu%
+ideální délku na spojení konců konstantanového vodiče a~připravených konektorů.
+Konce těchto dvou drátů jsme odizolovali, uchytili je v~koncovkách a~druhý
+konec zakroutili s~odizolovanými konci konstantanu%
 \footnotei{.}{Při spojování mědi a~konstantanu si musíme dát pozor na to,
-abychom se vyhnuli potřebě pájení. To by totiž přidalo do zařízení další kov a
-ovlivnilo výsledky.}
+abychom se vyhnuli potřebě pájení. To by totiž přidalo do zařízení další kov
+a~ovlivnilo výsledky.}
 Konce pevně zakroucené do sebe jsme zaizolovali smršťovací bužírkou pro ochranu
 před okolím\footnotei{.}{Toto můžeme provést, protože budeme tyto spoje 
-ovlivňovat teplotou, před čímž kousek plastu moc dobře neizoluje a stejně by 
+ovlivňovat teplotou, před čímž kousek plastu moc dobře neizoluje a~stejně by 
 získal teplotu okolí.}
 
-Jako poslední jsme zasunuli vodiče do plastových trubiček a ty připevnili
-pomocí kobercové pásky k desce.
+Jako poslední jsme zasunuli vodiče do plastových trubiček a~ty připevnili
+pomocí kobercové pásky k~desce.
 
-\subsubsection{Aparatura a průběh experimentu}
+\subsubsection{Aparatura a~průběh experimentu}
 Na provedení samotného experimentu je zapotřebí termočlánku, termosky (či jinak
 tepelně izolované nádoby), kádinky, ledu, dvou teploměrů, milivoltmetru
-a~způsobu ohřevu vody. V našem případě se jednalo o rychlovarnou konvici.
+a~způsobu ohřevu vody. V~našem případě se jednalo o~rychlovarnou konvici.
 
-Aby byl termočlánek stabilní a statický, opevnili jsme jej na stojan do takové
+Aby byl termočlánek stabilní a~statický, opevnili jsme jej na stojan do takové
 výšky, aby konce termočlánku se spoji kovů pohodlně dosáhli do kádinky
 a~termosky. Na vlastní stojany jsme také připevnili oba teploměry, jeden
 směřující do kádinky a~druhý do termosky, abychom mohli během experimentu
-pozorovat teplotní rozdíl. V~neposlední řadě jsme připojili k termočlánku
+pozorovat teplotní rozdíl. V~neposlední řadě jsme připojili k~termočlánku
 milivoltmetr pro měření napětí na termočlánku. 
 
-Do termosky jsme nalili vodu, přidali do ní led a vyčkali, dokud se teplota
+Do termosky jsme nalili vodu, přidali do ní led a~vyčkali, dokud se teplota
 neustálila (výsledná teplota by se měla pohybovat okolo~$"0\C"$). Následně jsme
-nalili horkou, až vařící, vodu do kádinky a započali měření. Při klesání
-rozdílu teplot jsme pravidelně odečítali hodnoty obou teploměrů a milivoltmetru
+nalili horkou, až vařící, vodu do kádinky a~započali měření. Při klesání
+rozdílu teplot jsme pravidelně odečítali hodnoty obou teploměrů a~milivoltmetru
 do momentu, než se teplota teplé vody neustálila na pokojové teplotě, kdy se
-již rozdíl teplot kádinky a termosky více neměnil.
+již rozdíl teplot kádinky a~termosky více neměnil.
