--- a/seminarka.tex
+++ b/seminarka.tex
@@ -10,12 +10,13 @@
 \title{Stanovení parametru termočlánku pomocí metody nejmenších čtverců}
 \leader{Mgr. Roman Pavlačka, Ph.D.}
 
+\prohlaseni{\subfile{sekce/prohlaseni.tex}}
+\podekovani{<Poděkování>} %TODO
+
 \graphicspath{{./graf/}}
 \addbibresource{sources.bib}
 
 %\geometry{showframe}
-
-\podekovani{<Poděkování>} %TODO
 
 \begin{document}
 \maketitle
