--- a/sekce/3.2-termoelektrika.tex
+++ b/sekce/3.2-termoelektrika.tex
@@ -3,7 +3,7 @@
 Termoelektrický jev se vyznačuje přímou konverzí tepla na elektrické napětí
 a~naopak. Objevuje se vždy u~spojené dvojce různých kovů a~ve své podstatě je
 sdružením čtyřech efektů pod jeden název: efektu Seebecka, Peltierova,
-Thomsonova a~Benedickova.~\cite{praktikum,diplomka}
+Thomsonova a~Benedickova.~\mcite{praktikum,diplomka}
 
 Termoelektrické napětí~$E$ vznikající mezi spoji kovů a~je závislé na funkci
 rozdílu teplot~$\Delta T = T_1 - T_2$. Je vyjádřeno pomocí vztahu
@@ -31,7 +31,7 @@ napětí.~\cite{jreichl-seebeck}
 objeven Jeanem Peltierem v~roce~1834 a~dokazuje, že změna potenciálů, tedy
 protékání proudu, může způsobit změnu teplot. To implikuje přenos tepla
 z~jednoho konce na druhý, což může být využito například pro chlazení předmětu
-bez nutnosti jakýchkoliv pohybujících se součástek.~\cite{peltier,
+bez nutnosti jakýchkoliv pohybujících se součástek.~\mcite{peltier,
 jreichl-peltier}
 
 \paragraph{Thomsonův efekt} je třetí efekt v~rámci termoelektrického jevu.
@@ -70,19 +70,19 @@ v~tabulce~\ref{tab:termoelectric_potencial}.
     \centering
     \begin{tabular}{ll|ll|lc}
         \toprule
-        Materiál & \popi{\phi}{mV} & Materiál & \popi{\phi}{mV} & 
-        Materiál &\popi{\phi}{mV}\\
+        Materiál & \popi{\varphi}{mV} & Materiál & \popi{\varphi}{mV} & 
+        Materiál &\popi{\varphi}{mV}\\
         \midrule
-        křemík   & 45   & rhodium  & 0,65 & tuha       & $"\phm0,2"$\\
-        antimon  & 4,7  & iridium  & 0,65 & rtuť       & $"\phm0,0"$\\
-        železo   & 1,8  & manganin & 0,6  & platina    & $"\phm0,0"$\\
-        molybden & 1,2  & tantal   & 0,5  & sodík      & $"-0,2"$\\
-        kadmium  & 0,9  & cesium   & 0,5  & palladium  & $"-0,3"$\\
-        wolfram  & 0,8  & cín      & 0,45 & draslík    & $"-0,9"$\\
-        měď      & 0,75 & olovo    & 0,45 & nikl       & $"-1,5"$\\
-        zlato    & 0,7  & hořčík   & 0,4  & kobalt     & $"-1,6"$\\
-        stříbro  & 0,7  & hliník   & 0,4  & konstantan & $"-3,4"$\\
-        zinek    & 0,7  & grafit   & 0,3  & vismut     & $"-7\phantom{,0}"$\\
+        křemík   & $"45  "$ & rhodium  & $"0,65"$ & tuha       & $"\phm0,2"$\\
+        antimon  & $"4,7 "$ & iridium  & $"0,65"$ & rtuť       & $"\phm0,0"$\\
+        železo   & $"1,8 "$ & manganin & $"0,6 "$ & platina    & $"\phm0,0"$\\
+        molybden & $"1,2 "$ & tantal   & $"0,5 "$ & sodík      & $"-0,2"$\\
+        kadmium  & $"0,9 "$ & cesium   & $"0,5 "$ & palladium  & $"-0,3"$\\
+        wolfram  & $"0,8 "$ & cín      & $"0,45"$ & draslík    & $"-0,9"$\\
+        měď      & $"0,75"$ & olovo    & $"0,45"$ & nikl       & $"-1,5"$\\
+        zlato    & $"0,7 "$ & hořčík   & $"0,4 "$ & kobalt     & $"-1,6"$\\
+        stříbro  & $"0,7 "$ & hliník   & $"0,4 "$ & konstantan & $"-3,4"$\\
+        zinek    & $"0,7 "$ & grafit   & $"0,3 "$ & vismut     & $"-7\phantom{,0}"$\\
         \bottomrule
     \end{tabular}
     \caption{Hodnoty termoelektrického potenciálu při rozdílu 
@@ -100,18 +100,18 @@ různé efektivní kombinace prvků a~slitin (viz.~tabulka~\ref{tab:iec584}).
         \toprule
         Označení typu & Materiál & Teplotní rozsah v~$\C$\\
         \midrule
-        T & měď a~konstantan (CuNi) & $-200$ -- 350\phantom{1 }\\
-        J & železo a~konstantan (CuNi)& $-200$ -- 750\phantom{1 }\\
-        E & chromel (NiCr) a~konstantan (CuNi) & $-100$ -- 900\phantom{1 }\\
-        K & chromel (NiCr) a~alumen (NiAl) & $-200$ -- 1~200\\
-        N & nicrosil (NiCrSi) a~nisil (NiSi) & $-200$ -- 1~200\\
-        S & platina a~slitina platiny a~10~\% rhodia & \phantom{$-00$}0 -- 1~600\\
-        R & platina a~slitina platiny a~13~\% rhodia & \phantom{$-00$}0 -- 1~600\\
+        T & měď a~konstantan (CuNi) & $-200$ -- $350$\phantom{$1~$}\\
+        J & železo a~konstantan (CuNi)& $-200$ -- $750$\phantom{$1~$}\\
+        E & chromel (NiCr) a~konstantan (CuNi) & $-100$ -- $900$\phantom{$1~$}\\
+        K & chromel (NiCr) a~alumen (NiAl) & $-200$ -- $1~200$\\
+        N & nicrosil (NiCrSi) a~nisil (NiSi) & $-200$ -- $1~200$\\
+        S & platina a~slitina platiny a~10~\% rhodia & \phantom{$-00$}$0$ -- $1~600$\\
+        R & platina a~slitina platiny a~13~\% rhodia & \phantom{$-00$}$0$ -- $1~600$\\
         B & slitina platiny a~30~\% rhodia a~slitina platiny 
-            a~6~\% rhodia & \phantom{$-$}300 -- 1~700\\
+            a~6~\% rhodia & \phantom{$-$}$300$ -- $1~700$\\
         \bottomrule
     \end{tabular}
     \caption{Typy termočlánků a~jejich označení dle 
-    standartu~\emph{IEC 584}.~\cite{diplomka,iec584}}
+    standartu~\emph{IEC 584}.~\mcite{diplomka,iec584}}
     \label{tab:iec584}
 \end{table}
