--- a/sekce/4-vysledky.tex
+++ b/sekce/4-vysledky.tex
@@ -1,9 +1,37 @@
 \section{Výsledky}
-
-
 \subsection{Naměřená data}
+Experiment jsme měřili za pomoci dvou digitální teploměrů značky Vernier
+s~přesností~$"0.1 \C"$ a~analogového voltmetru o~přesnosti~$"0.2 mV"$
+(obr.~\ref{fig:voltmetr}).
+
 % tabulka dat
+\begin{table}[htbp]
+    \centering
+    \begin{tabular}{ccc}
+        \toprule
+        \popit{\Delta T}{\C} & \popit{E_1}{mV} & \popit{E_2}{mV}\\
+        \midrule
+        80 & $"2.8"$ & $"2.8"$\\
+        75 & $"2.8"$ & $"2.6"$\\
+        70 & $"2.6"$ & $"2.4"$\\
+        65 & $"2.4"$ & $"2.2"$\\
+        60 & $"2.2"$ & $"2.0"$\\
+        55 & $"2.0"$ & $"2.0"$\\
+        50 & $"1.8"$ & $"1.8"$\\
+        45 & $"1.8"$ & $"1.6"$\\
+        40 & $"1.6"$ & $"1.4"$\\
+        35 & $"1.2"$ & $"1.4"$\\
+        30 & $"1.2"$ & $"1.2"$\\
+        25 & $"1.0"$ & $"1.0"$\\
+        20 & $"1.0"$ & $"1.0"$\\
+        \bottomrule
+    \end{tabular}
+    \caption{Naměřená data}
+    \label{tab:data}
+\end{table}
+
 % graf
+\plotfig{graf/data.tex}[Graf naměřených dat][graph:data]
 
 \subsection{Výpočet parametru}
 
