--- a/seminarka.tex
+++ b/seminarka.tex
@@ -2,6 +2,8 @@
 \usepackage{subfiles}
 \usepackage[nottoc]{tocbibind}
 \usepackage{array}
+\usepackage{caption}
+\usepackage{subcaption}
 
 % -----
 % School required format 
@@ -63,4 +65,7 @@
 \tocsection
 \listoffigures
 \listoftables
+
+\subfile{sekce/figures.tex}
+
 \end{document}
