--- a/sekce/3.1-metoda-ctvercu.tex
+++ b/sekce/3.1-metoda-ctvercu.tex
@@ -1,9 +1,3 @@
-\newcommand{\nsum}{\sum^n_{i=1}}
-\newcommand{\nsumx}{\sum^n_{i=1}x_i}
-\newcommand{\nsumy}{\sum^n_{i=1}y_i}
-\newcommand{\nsumxx}{\sum^n_{i=1}x_i^2}
-\newcommand{\nsumxy}{\sum^n_{i=1}x_iy_i}
-
 \subsection{Proložení dat funkcí}
 Ve fyzikálních experimentech obvykle měříme veličiny, které jsou závislé na
 veličině jiné, která se během experimentu mění. Vztah mezi závislou
@@ -105,8 +99,8 @@ následně vzniká soustava rovnic, kterou jsme schopni vyřešit. Je využívan
 řešení lineárních problémů, kdy můžeme naší rovnici zapsat  pomocí
 polynomu~$n$-tého řádu.
 
-
 \subsubsection{Lineární regrese}
+\label{sec:lin-regrese}
 Speciální případ analytického řešení je lineární regrese. Jedná se o~případ,
 kdy experimentálně získaná data prokládáme lineární funkcí s~obecným předpisem
 \eq{
