--- a/sekce/3.2-termoelektrika.tex
+++ b/sekce/3.2-termoelektrika.tex
@@ -1,5 +1,6 @@
 \subsection{Termoelektrický jev}
 \subsubsection{Efekty termoelektrické jevu}
+\label{sec:efekty-termoelektrika}
 Termoelektrický jev se vyznačuje přímou konverzí tepla na elektrické napětí
 a~naopak. Objevuje se vždy u~spojené dvojce různých kovů a~ve své podstatě je
 sdružením čtyřech efektů pod jeden název: efektu Seebecka, Peltierova,
