--- a/sekce/figures.tex
+++ b/sekce/figures.tex
@@ -1,4 +1,4 @@
-\fullfig{figures/voltmetr.jpg}[Použitý milivoltmetr][fig:voltmetr]
+\fullfig[width=0.65\textwidth]{figures/voltmetr.jpg}[Použitý milivoltmetr][fig:voltmetr]
 
 \fullfig[width=0.9\textwidth]{figures/aparatura.jpg}[Aparatura experimentu]
 
