--- a/sources.bib
+++ b/sources.bib
@@ -68,6 +68,11 @@
 }
 
 @online{iec584,
-    title  = "Thermocouple base materials acc to IEC 584",
-    url    = "http://www.nanyange.com.tw/driver/drivers/Technical%20Information_02.pdf"
+    title = "Thermocouple base materials acc to IEC 584",
+    url   = "http://www.nanyange.com.tw/driver/drivers/Technical%20Information_02.pdf"
+}
+
+@online{thermocoupleinfo,
+    title = "Types of Thermocouple",
+    url   = "https://www.thermocoupleinfo.com/thermocouple-types.htm"
 }
